[gd_scene load_steps=12 format=3 uid="uid://d3ir376df04gd"]

[ext_resource type="Script" uid="uid://c8n7ss4q1ht50" path="res://Scenes/flyingcamera.gd" id="1_8gbba"]
[ext_resource type="PackedScene" uid="uid://dymjq2key3kb1" path="res://entities/missle/missle.tscn" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://d0upfyy8j6w21" path="res://Scenes/main.gd" id="1_kry3j"]
[ext_resource type="Script" uid="uid://d1of12ts150xl" path="res://Scenes/sun.gd" id="2_6bp64"]
[ext_resource type="PackedScene" uid="uid://bsms6twx141w1" path="res://entities/ground/ground.tscn" id="3_jjvhh"]
[ext_resource type="PackedScene" uid="uid://glqclqyhwk8x" path="res://entities/tank/tank.tscn" id="4_jjvhh"]
[ext_resource type="PackedScene" uid="uid://b100j35d68crv" path="res://entities/arrow/arrow.tscn" id="6_21xkr"]
[ext_resource type="PackedScene" uid="uid://cw1iooowijf18" path="res://effects/explosion/explosion.tscn" id="6_344ge"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_21xkr"]

[sub_resource type="Sky" id="Sky_6bp64"]
sky_material = SubResource("ProceduralSkyMaterial_21xkr")

[sub_resource type="Environment" id="Environment_344ge"]
background_mode = 2
sky = SubResource("Sky_6bp64")
fog_enabled = true
fog_mode = 1
fog_light_color = Color(0.5484086, 0.58475554, 0.63727725, 1)
fog_density = 0.1613
fog_sky_affect = 0.43

[node name="Main" type="Node3D"]
script = ExtResource("1_kry3j")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.89907986, 0.056566905, 0.43411475, 0.04123549, -0.9762661, 0.21261281, 0.43583834, 0.20905682, 0.8754086, 0, 0, -0.22804451)
light_color = Color(1, 1, 0.101960786, 1)
light_energy = 2.0
light_indirect_energy = 0.75
light_volumetric_fog_energy = 1.166
shadow_enabled = true
shadow_normal_bias = 0.1
directional_shadow_max_distance = 210.3
script = ExtResource("2_6bp64")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.7628715, 0.6465502, 0, -0.6465502, 0.7628715, 0, 125.65243, 202.17198)
light_energy = 1.055
shadow_enabled = true

[node name="Sky" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_344ge")

[node name="RocketPlayer" parent="." instance=ExtResource("1_jjgbg")]
transform = Transform3D(1, 0, 0.00015702844, 0, 1, 0, -0.00015702844, 0, 1, 0, 7, 0)

[node name="MissleCamera" type="Camera3D" parent="RocketPlayer"]
transform = Transform3D(1, 2.93865e-05, 2.7742353e-06, -2.9386501e-05, 0.982333, 0.18714131, 2.7742062e-06, -0.18714131, 0.982333, 0.00012855652, 0.054160118, -0.818683)

[node name="Ground" parent="." instance=ExtResource("3_jjvhh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1639764, 0)

[node name="Tank" parent="." instance=ExtResource("4_jjvhh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.9251137, 7.1556587, -2.3946075)

[node name="TankCamera" type="Camera3D" parent="Tank"]
transform = Transform3D(0.5634684, 0.37672776, -0.73524123, 0, 0.8899742, 0.4560109, 0.82613766, -0.25694773, 0.50147235, -5.774001, 4.0414076, 4.9170537)

[node name="LauncherCamera" type="Camera3D" parent="."]
transform = Transform3D(0.963733, 0, -0.26686832, 0, 1, 0, 0.26686832, 0, 0.963733, -0.6108804, 6.852295, 1.548316)
current = true
script = ExtResource("1_8gbba")

[node name="Arrow" parent="." instance=ExtResource("6_21xkr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25.714571)

[node name="Explosion" parent="." instance=ExtResource("6_344ge")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.519058, 298.5687, -36.34353)
